--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "31a37590-cd06-4a2a-bb7b-cc4da623985e"
 authors = ["Erik Schnetter <schnetter@gmail.com>"]
 version = "0.1.0"
 
+[compat]
+ssht_jll = "1.5.1"
+julia = "1.4"
+
 [deps]
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
