--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "ssht"
+name = "SSHT"
 uuid = "31a37590-cd06-4a2a-bb7b-cc4da623985e"
 authors = ["Erik Schnetter <schnetter@gmail.com>"]
 version = "0.1.0"
